COMMIT PRUEBA IMAGENES, POSIBLE INESTABILIDAD